--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "httpsig-webtool",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "web tool to parse, generate, and validate HTTP Signature",
   "main": "webpack.config.js",
   "repository": {
@@ -42,6 +42,9 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.35.0",
     "webpack-cli": "^4.9.1"
+  },
+  "overrides": {
+    "json5": "^2.2.3"
   },
   "engines": {
     "node": ">= 12.22.0",
